@startuml
left to right direction
title Módulo Quarto - Design de Componentes
skinparam componentStyle uml2
skinparam package {
  backgroundColor #E8EAF6
  borderColor #303F9F
}

' ==========================================================
' 1. DEFINIÇÃO DAS CAMADAS E INTERFACES
' ==========================================================

package Apresentacao <<Camada do Usuário>> {
    interface InterfaceApresentacaoQuarto as IAQuarto
    [ModuloApresentacaoQuarto] as MAQuarto
}

package Servico <<Camada Lógica>> {
    interface InterfaceServicoQuarto as ISQuarto
    [ModuloServicoQuarto] as MSQuarto
}

package Persistencia <<Camada de Acesso>> {
    interface InterfaceAcessoInformacao as IAI
    [ModuloAcessoInformacao] as MAI
}

[BD / STL] as DadosBrutos

' ==========================================================
' 2. RELAÇÕES DE REALIZAÇÃO (BOLA - O FORNECEDOR)
' ==========================================================
IAQuarto o-- MAQuarto : <<Controladora Apresentação>>
ISQuarto o-- MSQuarto : <<Controladora Serviço>>
IAI o-- MAI : <<Controladora Acesso Informação (CAI)>>


' ==========================================================
' 3. RELAÇÕES DE USO (SOQUETE - O CLIENTE)
' ==========================================================
' Apresentação depende de Serviço
MAQuarto ..> ISQuarto : Depende (CRUD Quarto)

' Serviço depende de Persistência
MSQuarto ..> IAI : Depende (Buscar Dados)

' Persistência usa os Dados Brutos
MAI ..> DadosBrutos : Usa (READ/WRITE)

@enduml